# render-math

./: .cruft.json  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.py  tasks.py  tox.ini
.github/workflows/: main.yml
pelican/plugins/render_math/: __init__.py  math.py  pelican_mathjax_markdown_extension.py  test_render_math.py  version.py
pelican/plugins/render_math/test_data/: article.ipynb  article.nbdata  article_with_math_formulas.rst
render_math/: math.py
