[tool.poetry]
name = "pelican-render-math"
version = "1.0.3"
description = "Render mathematics in Pelican site content"
authors = ["Pelican Dev Team <authors@getpelican.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "math"]
repository = "https://github.com/pelican-plugins/render-math"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/sitemap/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = ">=4.5"
typogrify = "^2.0.7"
markdown = {version = ">=3.2", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^3.9.2"
flake8-black = "^0.3"
invoke = "^2.1"
isort = "^5.11.5"
markdown = "^3.4"
pytest = "^6.0"
pytest-cov = "^3.0"
pytest-sugar = "^0.9.7"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Render Math"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true
version-strings = ["pelican/plugins/render_math/version.py"]

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
